config/kubernetes/backend/pixelproxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: pixelproxy
spec:
  ports:
    - port: 80
      targetPort: 9999
  selector:
    app: auth
    component: pixelproxy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pixelproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
      component: pixelproxy
  template:
    metadata:
      labels:
        component: pixelproxy
    spec:
      containers:
        - name: pixelproxy
          image: registry.gitlab.com/anfaux/pixel-proxy:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9999
